--- a/country.html
+++ b/country.html
@@ -5,11 +5,11 @@
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-		<title>Country | REST Countries API</title>
+        <title>Country | REST Countries API</title>
+        
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
-		<link rel="stylesheet" href="style.css"/>
-        <link rel="stylesheet" href="desktop.css">
-        <title>Country</title>
+		<link rel="stylesheet" href="/styles/style.css"/>
+        <link rel="stylesheet" href="/styles/desktop.css">
 	</head>
 
 	<body>
@@ -41,6 +41,6 @@
 		</div>
 		
 		<script src="https://unpkg.com/vue@next"></script>
-		<script  type="module" src="app.js"></script>
+		<script  type="module" src="/scripts/app.js"></script>
 	</body>
 </html>
