--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 		<title>REST Countries API</title>
+
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
-		<link rel="stylesheet" href="style.css"/>
-		<link rel="stylesheet" href="desktop.css">
+		<link rel="stylesheet" href="/styles/style.css"/>
+		<link rel="stylesheet" href="/styles/desktop.css">
 	</head>
 
 	<body>
-
+		
 		<div id="app">
 			<header>
 
@@ -106,6 +107,6 @@
 
 		<!--<script src="script.js"></script>-->
 		<script src="https://unpkg.com/vue@next"></script>
-		<script  type="module" src="app.js"></script>
+		<script  type="module" src="/scripts/app.js"></script>
 	</body>
 </html>
