--- a/country.html
+++ b/country.html
@@ -15,32 +15,30 @@
 	<body>
 
 		<div id="app">
-	
-            <!-- T1 -->
-            <!--v-show="searchPosition(country) == (this.countries.indexOf(country) != -1)"-->
-            <div  class="countries" :data-item='this.region'>
+            <div  class="countries">
                 <div class="img-container">
-                    <img :src="this.flag" :alt="this.name"/>
+                    <img :src="country.flag" :alt="country.name"/>
                 </div>
                 <div class="card-body">
-                    <h3 class="country-name">{{this.name}}</h3>
+                    <h3 class="country-name">{{country.name}}</h3>
                     <p>
                         <strong>Population:</strong>
-                        {{new Intl.NumberFormat("en-US").format(this.population)}}
+                        {{new Intl.NumberFormat("en-US").format(country.population)}}
                     </p>
                     <p class="country-region">
                         <strong>Region:</strong>
-                        {{this.region}}
+                        {{country.region}}
                     </p>
                     <p>
                         <strong>Capital:</strong>
-                        {{this.capital}}
+                        {{country.capital}}
                     </p>
+                    <p v-for="border in borders">{{getBorders()}}</p>
                 </div>
             </div>
 		</div>
 		
 		<script src="https://unpkg.com/vue@next"></script>
-		<script  type="module" src="/scripts/app.js"></script>
+		<script  type="module" src="/scripts/getCountry.js"></script>
 	</body>
 </html>
