--- a/country.html
+++ b/country.html
@@ -30,7 +30,7 @@
                 <section id="country-card">
 
                     <div class="back">
-                        <button class="btn-back" @click="$router.go(-1)">
+                        <button class="btn-back" @click="goIndex">
                             <i class="fas fa-chevron-left"></i>
                             Back
                         </button>
